[gd_scene load_steps=2 format=3 uid="uid://fb45rogpex4w"]

[ext_resource type="Script" path="res://Utility/HurtBox.gd" id="1_yckvo"]

[node name="HurtBox" type="Area2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_yckvo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="DisabledTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="DisabledTimer" to="." method="_on_disabled_timer_timeout"]
